docs/1.0/whats-new.md
# What's new

Check back here to learn about all the latest changes to Flipside.

[2020.1.0-rc2](https://www.flipsidexr.com/blog/post/83/flipside-studio-20201-release-candidate-2)<br>
<small><em>June 1, 2020</em></small><br>
The second release candidate features minor improvements and a number of important bug fixes as we get closer to a new stable Flipside Studio release.

[Update #38](/blog/post/80/update-38-flipside-studio-release-candidate-1)<br>
<small><em>May 21, 2020</em></small><br>
The first release candidate for a new stable Flipside Studio is here. Includes no new features but several bug fixes.

[Update #37](/blog/post/79/update-37-stream-directly-zoom-skype-etc)<br>
<small><em>May 11, 2020</em></small><br>
Stream directly to Zoom, Skype, etc. in Flipside Studio, added menu option to duplicate characters and sets in the Flipside Creator Tools, and other fixes and improvements.

[Update #36](/blog/post/78/update-36-auto-scrolling-teleprompter-update-saved-setups)<br>
<small><em>April 23, 2020</em></small><br>
Auto-scrolling teleprompter, saved setups are now editable, and a number of bug fixes and improvements to both Flipside Studio and the Flipside Creator Tools plugin for Unity.

[Update #35](/blog/post/77/update-35-eye-realism-camera-switcher-improvements-texture-b)<br>
<small><em>April 2, 2020</em></small><br>
Improved eye movement realism, in-VR camera switcher now in the Show Tools menu, SteamVR finger pointing fixed, delete saved setups, and lots of other fixes and improvements.

[Update #34](/blog/post/76/update-34-twitch-interactions-sets-choose-your-own-adventure)<br>
<small><em>March 10, 2020</em></small><br>
Trigger events in sets from Twitch comments, build shared choose-your-own-adventures, many Flipside Creator Tools improvements, and a number of bug fixes.

[Update #33](/blog/post/75/update-33-major-improvements-flipside-creator-tools)<br>
<small><em>February 19, 2020</em></small><br>
Major improvements to the Flipside Creator Tools including testing interactions in VR without leaving Unity, new ways of triggering events, a scoring system with guns and targets, and audio pooling for better performance. Flipside Studio now supports more than 8 cameras on the in-VR camera switcher, and many bug fixes.

[Update #32a, #32b](#)<br>
<small><em>January 14, 2020</em></small><br>
Fixes for teleprompter in playback/overdubbing, combo texture facial expressions, ghost mode object movement in playback, ToggleElement  on characters with body physics, and object respawning.

[Update #32](/blog/post/74/flipside-update-32-server-based-multiplayer)<br>
<small><em>December 12, 2019</em></small><br>
Server-based multiplayer option, texture-based faces can now support blinking and expressions, improved voice recording quality, and various other bug fixes and improvements.

[Update #31a, #31b](#)<br>
<small><em>November 25, 2019</em></small><br>
Vive controller initialization fix. Disabled validation check that broke some characters with colliders. Fixed potential error if characters have a list of eyes with unassigned values. Potential source of error fixed in Creator Tools v0.27 as well.

[Update #31](/blog/post/71/flipside-update-31-character-body-physics-unity-2019-and-mor)<br>
<small><em>November 4, 2019</em></small><br>
Body physics on characters, upgraded Unity compatibility to 2019.2, object cloning in Set Builder, NDI output support, 2-3x faster launch time, and other performance optimizations and reliability improvements. Creator Tools now supports teleporting around sets, seeing your controllers in VR including interacting with colliders and toggles, and testing facial expressions just like you'd control them in Flipside Studio.

[Update #30a](#)<br>
<small><em>August 29, 2019</em></small><br>
Several bug fixes to multiplayer, slideshow, reliability, and performance improvements, Flipside Creator Tools updated to v0.23.

[Update #30](/blog/post/69/flipside-update-30-save-your-setups)<br>
<small><em>August 1, 2019</em></small><br>
Save snapshots of your setups, smoothing on local user movement, many other bug fixes.

[Update #29c](#)<br>
<small><em>June 28, 2019</em></small><br>
Bug fixes related to multiplayer synchronization, interactions, event triggers, and user modes, as well as an app freeze fix and a few more.

[Update #29b](#)<br>
<small><em>June 12, 2019</em></small><br>
Multiplayer connection improvements, combine facial expression modes on one character, interaction and UI improvements, access the menu while recording, Vive Tracker orientation fixes, and other bug fixes.

[Update #29a](#)<br>
<small><em>May 30, 2019</em></small><br>
New chair marker in Show Tools menu, eye targets added to the Creator Tools package for Unity, various fixes for multiplayer, playback, background sync, and synchronizing state of colliders and toggles.

[Update #29](/blog/post/68/flipside-update-29-background-sync-thumbs-fingers-and-more)<br>
<small><em>May 23, 2019</em></small><br>
Background sync for recordings, thumb and finger improvements, multiplayer connection reliability, and various bug fixes.

[Update #28](/blog/post/67/flipside-update-28-take-seat)<br>
<small><em>May 14, 2019</em></small><br>
Characters can sit in chairs, teleport to actor marks and other targets, star takes to keep track of the good ones, guest collaboration sidebar, smooth world rotation in build and ghost mode, and a ton of fixes.

[Update #27](/blog/post/65/flipside-update-27-character-improvements-reduced-save-times)<br>
<small><em>April 22, 2019</em></small><br>
Character improvements, reduced save times, slideshow playback fix.

[Update #26](/blog/post/64/flipside-update-26-multiplayer-improvements)<br>
<small><em>April 15, 2019</em></small><br>
Multiplayer backend upgrade, microphone input fix, and several multiplayer-related bug fixes.

[Update #25](/blog/post/63/flipside-update-25-multi-monitor-desktop-mirror-microphone-i)<br>
<small><em>April 10, 2019</em></small><br>
Desktop mirror multi-monitor support, embed your desktop in custom sets, switch microphone input devices in app, bloom post-processing effect setting, and lots of bug fixes.

[Update #24](https://www.flipsidexr.com/blog/post/62/flipside-update-24-ghost-mode-and-ton-bug-fixes)<br>
<small><em>March 22, 2019</em></small><br>
Go invisible with Ghost Mode, clearing sets got a little safer, and a ton of bug fixes related to multiplayer, character and set importing, and more.

[Update #23](/blog/post/61/flipside-update-23-desktop-mirror-looping-360-videos-many-fi)<br>
<small><em>March 6, 2019</em></small><br>
Desktop mirror prop in VR (experimental), looping 360 video skyboxes, example set added to the Creator Tools, new bug reporter under Settings > Support, and lots of bug fixes.

[Update #22](/blog/post/60/flipside-update-22-seeing-yourself-and-beta-bug-fixes)<br>
<small><em>February 13, 2019</em></small><br>
See your character while acting, start using Flipside while assets are still loading, improved texture caching, improve collisions on hands in playback, embedded camera fixes, and various fixes for characters.

[Update #21](/blog/post/58/flipside-update-21-faster-character-loading-and-multiplayer)<br>
<small><em>Janurary 11, 2019</em></small><br>
Improved multiplayer recording stability, improved character preview load times, fixed recordings freezing on ACTION, added Facebook streaming through Oculus, fixed duplicate cameras loading on sets, reduced file sizes for multiplayer recording, fixed issue with scale and snappable planes in Set Builder mode and many other bug fixes and improvements.

[Update #20a](#)<br>
<small><em>December 18, 2018</em></small><br>
Fixed app loading issue, colliders triggering too soon on playback, characters in T-pose in camera previews, friends panel and handheld scaling, and added notification sound for invites and friend requests. Fixed imported props, respawned objects, POV cameras and handheld camera timer over multiplayer.

[Update #20](/blog/post/56/flipside-studio-update-20-flipside-goes-multiplayer)<br>
<small><em>December 14, 2018</em></small><br>
Cross-platform multiplayer! Major updates to the Flipside Creator Tools to support multiple face meshes, jaw bones, custom collisions between objects, invisible elements on characters, Unity timelines sync with Flipside recordings, Google Drive links working with slideshow, and more.

[Alpha Update #19](/blog/post/55/flipside-alpha-update-19-teleporter-20-set-builder-snapping)<br>
<small><em>November 23, 2018</em></small><br>
Teleporter 2.0, Set Builder mode improved snapping, and many bug fixes including more natural thumb positions, Director Mode fixes, eyes in playback, improved foot stepping, menu improvements, and slideshow components all work independently of each other.

[Alpha Update #18](/blog/post/54/flipside-alpha-update-18-showhide-menu-camera-movement-setti)<br>
<small><em>October 16, 2018</em></small><br>
Show/hide the palette menu, camera movement and easing settings, support for importing Unity's Cinemachine virtual cameras in custom sets, new Featured category under Characters and Sets, and lots of bug fixes and smaller improvements.

[Alpha Update #17](/blog/post/51/flipside-alpha-update-17-animate-objects-shadow-settings-and)<br>
<small><em>September 20, 2018</em></small><br>
Animate objects in Director Mode, 360 video support, settings panel for slideshow, teleprompter, Twitch chat and shadows, shadow settings and quality control, desktop view in Flipside, Wolf3D avatar support, screen elements in custom sets, and various fixes.

[Alpha Update #16](/blog/post/45/flipside-alpha-update-16-experimental-director-mode-import-a)<br>
<small><em>September 6, 2018</em></small><br>
Experimental new Director Mode, animate faces with Unity animations, sync imported animations and audio with Flipside recordings, import custom cameras in sets, trigger events in sets, and tons of bug fixes.

[Alpha Update #15](/blog/post/44/flipside-alpha-update-15-new-characters-vlogger-set-and-load)<br>
<small><em>August 9, 2018</em></small><br>
New lion and crocodile characters, new vlogger living room set, working clock prop, resizable preview monitors, auto-hide mouse cursor, and several other fixes and improvements.

[Alpha Update #14](/blog/post/43/flipside-alpha-update-14-improved-lip-sync-accuracy-camera-z)<br>
<small><em>July 26, 2018</em></small><br>
Much improved lip sync timing, handheld camera zoom using the joystick/thumbpad, in-VR camera switcher fixes, other bug fixes.

[Alpha Update #13](/blog/post/41/flipside-alpha-update-13)<br>
<small><em>July 13, 2018</em></small><br>
In-VR camera switcher! Fullscreen mode for easier video capture! New "Bones" character! New light prop for dynamic lighting! Minor improvements incl: Up to 3 textures on custom prop imports, lighting fixes on various sets, more accurate button pressing on faster movement, feet feel more natural, and new users no longer have to register before getting into the app.

[Alpha Update #12](/blog/post/40/flipside-alpha-update-12)<br>
<small><em>June 15, 2018</em></small><br>
Shared characters and sets! In-VR slideshow and teleprompter controllers! Actor marks for easier setup of shots and knowing where to stand, lots of bug fixes, and our first Flipside contest!

[Alpha Update #11](/blog/post/34/flipside-alpha-update-11)<br>
<small><em>May 18, 2018</em></small><br>
New characters! A giraffe, an elephant, and a goblin! Twitch chat panel for interacting with Twitch audiences, improved loading notices and alerts, fixed lip sync playback bug, wonky knees, and hand positioning for Vive users.

[Alpha Update #10](/blog/post/29/flipside-alpha-update-10)<br>
<small><em>May 2, 2018</em></small><br>
Import your own custom sets! Realistic hair, cloth, and tail movement. Simplified lip syncing, toggle camera shake, improved teleporter, and many many bug fixes.

[Alpha Update #9](/blog/post/28/flipside-alpha-update-9)<br>
<small><em>April 10, 2018</em></small><br>
Import 360 photos as custom skies, improved keyboard camera controls, transparency on imported props, slideshow fixes for real-time streaming, and other fixes.

[Alpha Update #8](/blog/post/26/flipside-alpha-update-8)<br>
<small><em>April 3, 2018</em></small><br>
Slideshow plays YouTube, live streams, hand fixes, holding props on start of recordings, Twitter sharing improved, and other bug fixes.

[Alpha Update #7](/blog/post/25/flipside-alpha-update-7)<br>
<small><em>March 27, 2018</em></small><br>
Mixed Reality mode (preview), viking props, bug fixes, Oculus controls improved through SteamVR, updated [[Creator Tools]] with scale fixes.

[Alpha Update #6](/blog/post/23/flipside-alpha-update-6)<br>
<small><em>March 20, 2018</em></small><br>
Stickman characters, character importer movement previews, character importer texture fixes.

[Alpha Update #5](/blog/post/22/flipside-alpha-update-5)<br>
<small><em>March 6, 2018</em></small><br>
Major character importer improvements, texture fixes on imported props, three new characters, and other fixes/improvements.

[Alpha Update #4](/blog/post/19/flipside-alpha-update-4)<br>
<small><em>Feb 27, 2018</em></small><br>
Two new characters, object highlighting, various bug fixes.

[Alpha Update #3](/blog/post/18/flipside-alpha-update-3)<br>
<small><em>Feb 21, 2018</em></small><br>
Slideshow video fixes, eye movement fixes, magic pencil defaults to black, Unity upgrade to project and [[Creator Tools]], minor improvements.

[Alpha Update #2](/blog/post/17/flipside-alpha-update-2)<br>
<small><em>Feb 15, 2018</em></small><br>
In-app tutorials added, audio sync fixes, slideshow Dropbox compatibility, redesigned hands, fixes to UI, calibration, character importing, teleporter, and more.

[Alpha Update #1](/blog/post/14/flipside-alpha-update-1)<br>
<small><em>Jan 12, 2018</em></small><br>
Create your own characters, HTC Vive Tracker support, handheld camera improvements, many user interface improvements.

---

Next: [[ Tutorials ]]
